--- a/src/App.css
+++ b/src/App.css
@@ -143,6 +143,11 @@ header {
   align-items: center;
   gap: 2px;
   cursor: pointer;
+  transition: 0.2s ease-in-out;
+}
+
+.bottom-header section nav ul li:hover {
+  color: #840032;
 }
 
 .bottom-header section form {
@@ -155,7 +160,7 @@ header {
 .bottom-header section form input {
   width: 100%;
   height: 100%;
-  padding: 0 30px;
+  padding: 0 55px 0 30px;
   border-radius: 100px;
   outline: none;
   border: none;
@@ -172,6 +177,7 @@ header {
   position: absolute;
   top: 25%;
   right: 27px;
+  cursor: pointer;
 }
 
 .bottom-header section div {
@@ -181,6 +187,10 @@ header {
 
 .bottom-header section div:nth-of-type(1) {
   margin-right: 20px;
+}
+
+.bottom-header section p:hover {
+  color: #840032;
 }
 
 @media only screen and (max-width: 1200px) {
@@ -675,4 +685,356 @@ main {
   .flash-sales-product section:nth-of-type(2) div:nth-of-type(3) img {
     width: 55%;
   }
+}
+
+/* best deals section */
+.best-deals {
+  background: #fff;
+  padding: 120px 5% 56px;
+  font-family: "Work Sans", sans-serif;
+}
+
+.best-deals-header {
+  display: flex;
+  align-items: center;
+  margin-bottom: 89px;
+}
+
+.best-deals-header h4 {
+  font-size: 32px;
+  font-weight: 600;
+  line-height: 37.54px;
+  letter-spacing: 0.5px;
+  margin-right: 89px;
+}
+
+.best-deals-header p {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 21.79px;
+  margin-right: 16px;
+  color: #696969;
+  border: 1px solid #696969;
+  border-radius: 100px;
+  padding: 12px 24px;
+  cursor: pointer;
+}
+
+.best-deals-header p:nth-of-type(1) {
+  color: #fcfcfc;
+  background: #151515;
+}
+
+@media only screen and (max-width:1200px) {
+  .best-deals-header {
+    margin-bottom: 60px;
+  }
+  
+  .best-deals-header h4 {
+    font-size: 24px;
+    line-height: 30px;
+    margin-right: 89px;
+  }
+  
+  .best-deals-header p {
+    font-size: 12px;
+    line-height: 15px;
+    margin-right: 12px;
+    padding: 10px 20px;
+    cursor: pointer;
+  }
+}
+
+.best-deals-body {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  overflow-x: scroll;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+.best-deals-product {
+  min-width: 23%;
+  height: 400px;
+  border: 1px solid #E3E3E3EE;
+  border-radius: 24px;
+  margin-right: 2%;
+  overflow: hidden;
+  margin-bottom: 48px;
+}
+
+.best-deals-product section {
+  padding: 7% 5%;
+}
+
+.best-deals-product section:nth-of-type(2) {
+  background: #DAE0EF33;
+}
+
+.best-deals-product section:nth-of-type(1) {
+  width: 100%;
+  height: 60%;
+  position: relative;
+  background: #fff;
+}
+
+.best-deals-product section:nth-of-type(1) img:nth-of-type(1) {
+  width: 95%;
+  height: 100%;
+}
+
+.best-deals-product section:nth-of-type(1) img:nth-of-type(2) {
+  position: absolute;
+  top: 14px;
+  right: 20px;
+  border-radius: 100px;
+  background: #F8F8F8;
+  width: 48px;
+  height: 48px;
+  padding: 2px 10px;
+}
+
+.best-deals-product section:nth-of-type(2) div:nth-of-type(1) {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.best-deals-product section:nth-of-type(2) div:nth-of-type(1) p {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 21.79px;
+  margin-bottom: 12px;
+}
+
+.best-deals-product section:nth-of-type(2) div:nth-of-type(1) img {
+  width: 42px;
+  height: 42px;
+  padding: 2px 10px;
+  border-radius: 100px;
+  border: 0.5px solid #151515;
+}
+
+.best-deals-product section:nth-of-type(2) div:nth-of-type(2),
+.best-deals-product section:nth-of-type(2) div:nth-of-type(3) {
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.best-deals-product section:nth-of-type(2) div:nth-of-type(3) p {
+  margin-right: 24px;
+  font-size: 28px;
+  font-weight: 600;
+  line-height: 32.84px;
+  letter-spacing: 0.5px;
+}
+
+.best-deals-product section:nth-of-type(2) div:nth-of-type(3) span {
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 23.46px;
+  letter-spacing: 0.5px;
+  color: #EF4261;
+  text-decoration: line-through;
+}
+
+.best-deals-product section:nth-of-type(2) div:nth-of-type(2) p {
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 18.77px;
+  letter-spacing: 0.5px;
+}
+
+button.best-deals-button {
+  margin-left: 42%;
+  width: 120px;
+  height: 45px;
+  border: 1px solid #696969;
+  border-radius: 100px;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 22px;
+  color: #151515;
+  background: transparent;
+  cursor: pointer;
+}
+
+@media only screen and (max-width: 1200px) {
+  .best-deals-product {
+    height: 300px;
+    margin-bottom: 30px;
+    border-radius: 15px;
+  }
+  
+  .best-deals-product section {
+    padding: 5% 3%;
+  }
+  
+  .best-deals-product section:nth-of-type(1) img:nth-of-type(1) {
+    width: 90%;
+    height: 100%;
+  }
+  
+  .best-deals-product section:nth-of-type(1) img:nth-of-type(2) {
+    top: 10px;
+    left: 170px;
+    border-radius: 50%;
+    width: 35px;
+    height: 35px;
+    padding: 2px 7px;
+  }
+  
+  .best-deals-product section:nth-of-type(2) div:nth-of-type(1) p {
+    font-size: 13px;
+    line-height: 15px;
+    margin-bottom: 5px;
+  }
+  
+  .best-deals-product section:nth-of-type(2) div:nth-of-type(1) img {
+    width: 35px;
+    height: 35px;
+    padding: 2px 7px;
+  }
+  
+  .best-deals-product section:nth-of-type(2) div:nth-of-type(3) {
+    display: flex;
+    align-items: center;
+    margin-bottom: 13px;
+  }
+  
+  .best-deals-product section:nth-of-type(2) div:nth-of-type(3) p {
+    margin-right: 18px;
+    font-size: 20px;
+  }
+  
+  .best-deals-product section:nth-of-type(2) div:nth-of-type(3) span {
+    font-size: 15px;
+  }
+  
+  .best-deals-product section:nth-of-type(2) div:nth-of-type(2) p {
+    font-size: 11px;
+  }
+
+  button.best-deals-button {
+    margin-left: 44%;
+    height: 35px;
+    font-size: 12px;
+    line-height: 20px;
+  }
+}
+
+/* footer section */
+footer {
+  width: 100%;
+  background: #fff;
+  padding: 56px 5%;
+  font-family: "Work Sans", sans-serif;
+  display: flex;
+  align-items: center;
+  /* justify-content: space-between; */
+}
+
+footer h4 {
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 18.77px;
+  letter-spacing: 0.5px;
+  margin-bottom: 10px;
+  color: #131313;
+}
+
+footer li,
+footer p {
+  list-style: none;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 18.77px;
+  letter-spacing: 0.5px;
+  margin-bottom: 10px;
+  color: #797979;
+}
+
+.first-footer {
+  margin-right: 142px;
+}
+
+.first-footer img {
+  width: 115px;
+  height: 35px;
+  margin-bottom: 24px;
+}
+
+.first-footer p {
+  margin-bottom: 40px;
+}
+
+.first-footer div {
+  width: 145px;
+  height: 25px;
+  gap: 16px;
+  display: flex;
+  align-items: center;
+}
+
+.first-footer div img {
+  width: 25px;
+  cursor: pointer;
+}
+
+.second-footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  /* gap: 120px; */
+  width: 70%;
+}
+
+@media only screen and (max-width:1200px) {
+  footer h4 {
+    font-size: 13px;
+    line-height: 12px;
+    margin-bottom: 8px;
+  }
+  
+  footer li,
+  footer p {
+    font-size: 12px;
+    line-height: 12px;
+    margin-bottom: 8px;
+  }
+  
+  .first-footer {
+    margin-right: 120px;
+  }
+
+  .first-footer br {
+    display: none;
+  }
+  
+  .first-footer img {
+    width: 100px;
+    height: 30px;
+    margin-bottom: 18px;
+  }
+  
+  .first-footer p {
+    margin-bottom: 30px;
+  }
+  
+  .first-footer div {
+    width: 120px;
+    height: 20px;
+    gap: 12px;
+  }
+  
+  .first-footer div img {
+    width: 20px;
+  }
+  
+  /* .second-footer {
+    gap: 80px;
+    width: 75%;
+  } */
 }
