--- a/src/App.css
+++ b/src/App.css
@@ -51,6 +51,12 @@
   /* font-family: "Work Sans", sans-serif; */
 }
 
+a {
+    text-decoration: none;
+    color: inherit;
+    cursor: pointer;
+}
+
 body {
   width: 100%;
   position: relative;
@@ -734,14 +740,16 @@ main {
   }
   
   .flash-sales-header div:nth-of-type(2) img:nth-of-type(1) {
-    padding: 3px 5px;
+    display: none;
+    /* padding: 3px 5px; */
   }
   
   .flash-sales-header div:nth-of-type(2) img:nth-of-type(2) {
-    padding: 6px 8px;
+    /* padding: 6px 8px;
     border-radius: 8px;
     background: #1e2019;
-    width: 54px;
+    width: 54px; */
+    display: none;
   }
 }
 
@@ -1235,6 +1243,492 @@ button.best-deals-button {
   }
 }
 
+/* product Description page section */
+
+.product-flash-sales-description {
+  width: 100%;
+  padding: 80px 5%;
+  font-family: Work Sans;
+  background: #dae0ef33;
+}
+
+.product-flash-sales-description h3:nth-of-type(1) {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 18.77px;
+  letter-spacing: 0.5px;
+  margin-bottom: 30px;
+  color: #696969;
+}
+
+.product-flash-sales-description h3:nth-of-type(1) span {
+  color: #000;
+}
+
+.product-flash-sales-description img {
+  background: #fff;
+  border-radius: 24px;
+  cursor: pointer;
+}
+
+.item-description {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  margin-bottom: 80px;
+  gap: 4%;
+}
+
+.item-description section:nth-of-type(1),
+.item-description section:nth-of-type(2) {
+  width: 48%;
+  /* height: 770px; */
+}
+
+.item-description section:nth-of-type(1) img:nth-of-type(1) {
+  width: 100%;
+  padding: 5%;
+}
+
+.item-description section:nth-of-type(1) div {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  gap: 10px;
+}
+
+.item-description section:nth-of-type(1) div img {
+  min-width: 22%;
+  height: 140px;
+  padding: 8px !important;
+  border: 1px solid #696969;
+  border-radius: 4px;
+  margin-top: 15px;
+}
+
+.item-description section:nth-of-type(2) h3 {
+  font-size: 32px;
+  font-weight: 600;
+  line-height: 37.54px;
+  letter-spacing: 0.5px;
+  margin-bottom: 10px;
+  color: #000;
+}
+
+.item-description section:nth-of-type(2) div:nth-of-type(1) img {
+  background: transparent;
+}
+
+.item-description section:nth-of-type(2) div:nth-of-type(1) span {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 21.79px;
+  margin-bottom: 10px;
+  color: #767676;
+}
+
+.item-description section:nth-of-type(2) h4 {
+  font-size: 48px;
+  font-weight: 600;
+  line-height: 56.3px;
+  letter-spacing: 0.5px;
+  margin-bottom: 10px;
+}
+
+.item-description section:nth-of-type(2) div:nth-of-type(2) {
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 23.46px;
+  letter-spacing: 0.5px;
+  display: flex;
+  gap: 24px;
+  margin-bottom: 15px;
+}
+
+.item-description section:nth-of-type(2) div:nth-of-type(2) h5 {
+  color: #EF4261;
+  text-decoration: line-through;
+}
+
+.item-description section:nth-of-type(2) div:nth-of-type(2) h6 {
+  color: #08AC0A;
+}
+
+.item-description section:nth-of-type(2) p:nth-of-type(1) {
+  font-size: 24px;
+  font-weight: 600;
+  line-height: 28.15px;
+  letter-spacing: 0.5px;
+  margin-bottom: 10px;
+}
+
+.item-description section:nth-of-type(2) div:nth-of-type(3) {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.item-description section:nth-of-type(2) div:nth-of-type(3) img {
+  width: 22%;
+  padding: 5px;
+  border: 1px solid #E3E3E3;
+  border-radius: 4px;
+  margin-bottom: 15px;
+}
+
+.item-description section:nth-of-type(2) div:nth-of-type(4) {
+  display: flex;
+  align-items: center;
+  gap: 24px;
+  margin-bottom: 10px;
+}
+
+.item-description section:nth-of-type(2) div:nth-of-type(4) div {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 150px;
+  background: #fff;
+  border-radius: 56px;
+  margin-top: -10px;
+}
+
+.item-description section:nth-of-type(2) div:nth-of-type(4) div button {
+  background: transparent;
+  border: none;
+  outline: none;
+  color: #1C1B1F;
+  font-size: 24px;
+  cursor: pointer;
+}
+
+.item-description section:nth-of-type(2) div:nth-of-type(4) div span {
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 28.15px;
+  letter-spacing: 0.5px;
+  margin-top: 8px;
+  color: #151515;
+}
+
+.item-description section:nth-of-type(2) div:nth-of-type(4) p {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 18.77px;
+  letter-spacing: 0.5px;
+}
+
+.item-description section:nth-of-type(2) div:nth-of-type(4) p span {
+  color: #FF9500;
+}
+
+.item-description section:nth-of-type(2) div:nth-of-type(5) button {
+  height: 45px;
+  width: 100%;
+  /* border: none; */
+  outline: none;
+  border-radius: 100px;
+  margin-bottom: 10px;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 18.77px;
+  letter-spacing: 0.5px;
+  cursor: pointer;
+}
+
+.item-description section:nth-of-type(2) div:nth-of-type(5) button:nth-of-type(1) {
+  color: #fcfcfc;
+  background: #840032;
+  border: none;
+}
+
+.item-description section:nth-of-type(2) div:nth-of-type(5) button:nth-of-type(2) {
+  background: transparent;
+  color: #840032;
+  border: 1px solid #840032;
+}
+
+.item-description section:nth-of-type(2) div:nth-of-type(6) {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.item-description section:nth-of-type(2) div:nth-of-type(6) img {
+  width: 24px;
+  height: 24px;
+  border-radius: 0;
+  margin: 0;
+  padding: 0;
+  background: transparent;
+  border: none;
+}
+
+.item-description section:nth-of-type(2) div:nth-of-type(6) div {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  gap: 10px;
+  width: 100%;
+  height: 45px;
+}
+
+.item-description section:nth-of-type(2) div:nth-of-type(6) div:nth-of-type(2) {
+  margin-top: 10px;
+}
+
+.item-description section:nth-of-type(2) div:nth-of-type(6) p {
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 23.46px;
+  letter-spacing: 0.5px;
+  margin-bottom: -2px;
+  color: #696969;
+}
+
+.item-description section:nth-of-type(2) div:nth-of-type(6) span {
+  height: 25px;
+  width: 1px;
+  background: #000;
+}
+
+@media only screen and (max-width:1200px) {
+  .product-flash-sales-description {
+    padding: 50px 5%;
+  }
+  
+  .product-flash-sales-description h3:nth-of-type(1) {
+    font-size: 13px;
+    line-height: 14px;
+    margin-bottom: 20px;
+  }
+  
+  .item-description section:nth-of-type(1),
+  .item-description section:nth-of-type(2) {
+    width: 48%;
+  }
+  
+  .item-description section:nth-of-type(1) div img {
+    height: 110px;
+    margin-top: 10px;
+  }
+  
+  .item-description section:nth-of-type(2) h3 {
+    font-size: 24px;
+    line-height: 32px;
+    margin-bottom: 8px;
+  }
+  
+  .item-description section:nth-of-type(2) div:nth-of-type(1) span {
+    font-size: 12px;
+    line-height: 21.79px;
+    margin-bottom: 8px;
+  }
+  
+  .item-description section:nth-of-type(2) h4 {
+    font-size: 30px;
+    line-height: 46px;
+    margin-bottom: 8px;
+  }
+  
+  .item-description section:nth-of-type(2) div:nth-of-type(2) {
+    font-size: 18px;
+    line-height: 18px;
+    gap: 15px;
+    margin-bottom: 10px;
+  }
+  
+  .item-description section:nth-of-type(2) p:nth-of-type(1) {
+    font-size: 16px;
+    line-height: 22px;
+    margin-bottom: 8px;
+  }
+  
+  .item-description section:nth-of-type(2) div:nth-of-type(3) img {
+    margin-bottom: 10px;
+  }
+  
+  .item-description section:nth-of-type(2) div:nth-of-type(4) {
+    gap: 20px;
+    margin-bottom: 8px;
+  }
+  
+  .item-description section:nth-of-type(2) div:nth-of-type(4) div {
+    width: 120px;
+    height: 35px;
+  }
+  
+  .item-description section:nth-of-type(2) div:nth-of-type(4) div button {
+    font-size: 20px;
+  }
+  
+  .item-description section:nth-of-type(2) div:nth-of-type(4) div span {
+    font-size: 20px;
+  }
+  
+  .item-description section:nth-of-type(2) div:nth-of-type(4) p {
+    font-size: 16px;
+    line-height: 18.77px;
+  }
+  
+  .item-description section:nth-of-type(2) div:nth-of-type(4) p span {
+    color: #FF9500;
+  }
+  
+  .item-description section:nth-of-type(2) div:nth-of-type(5) button {
+    height: 35px;
+    margin-bottom: 8px;
+    font-size: 13px;
+  }
+  
+  .item-description section:nth-of-type(2) div:nth-of-type(6) img {
+    width: 16px;
+    height: 16px;
+  }
+  
+  .item-description section:nth-of-type(2) div:nth-of-type(6) div {
+    gap: 8px;
+    height: 25px;
+  }
+  
+  .item-description section:nth-of-type(2) div:nth-of-type(6) div:nth-of-type(2) {
+    margin-top: 8px;
+  }
+  
+  .item-description section:nth-of-type(2) div:nth-of-type(6) div:nth-of-type(3) img {
+    margin-top: 10px;
+  }
+  
+  .item-description section:nth-of-type(2) div:nth-of-type(6) p {
+    font-size: 13px;
+  }
+  
+  .item-description section:nth-of-type(2) div:nth-of-type(6) span {
+    height: 20px;
+  }
+}
+
+@media only screen and (max-width:800px) {
+  
+  .item-description {
+    display: block;
+  }
+  
+  .item-description section:nth-of-type(1),
+  .item-description section:nth-of-type(2) {
+    width: 100%;
+    margin-bottom: 30px;
+  }
+  
+  .item-description section:nth-of-type(1) div img {
+    min-width: 22%;
+    height: 140px;
+  }
+}
+
+@media only screen and (max-width:500px) {
+  .item-description section:nth-of-type(1) div img {
+    height: 80px;
+  }
+}
+
+/* item description text section */
+.division-line {
+  width: 120%;
+  margin-left: -10%;
+  background: #696969;
+  height: 1px;
+  display: block;
+}
+
+.item-description-text {
+  width: 100%;
+  margin-top: 80px;
+  font-family: "Open Sans", sans-serif;
+  /* border-top: 1px solid #696969; */
+}
+
+.item-description-text section:nth-of-type(1) {
+  display: flex;
+  align-items: center;
+  gap: 24px;
+  margin-bottom: 30px;
+}
+
+.item-description-text section:nth-of-type(1) p {
+  width: 150px;
+  height: 45px;
+  font-size: 16px;
+  font-weight: 400;
+  color: #151515;
+  border: 1px solid #696969;
+  border-radius: 100px;
+  line-height: 21.79px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.item-description-text section:nth-of-type(1) p:nth-of-type(1) {
+  border: none;
+  background: #151515;
+  color: #fcfcfc;
+}
+
+.item-description-text section:nth-of-type(2) h4 {
+  font-size: 24px;
+  font-weight: 600;
+  line-height: 28.15px;
+  letter-spacing: 0.5px;
+  margin-bottom: 15px;
+  font-family: "Work Sans", sans-serif;
+}
+
+.item-description-text section:nth-of-type(2) ul {
+  margin-left: 2%;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 21.79px;
+  color: #696969;
+}
+
+.item-description-text section:nth-of-type(2) ul li span {
+  color: #151515;
+  font-weight: 500;
+}
+
+.item-description-text section:nth-of-type(2) ul:nth-of-type(2) {
+  list-style: none;
+  margin-left: 0;
+  margin-top: 30px;
+}
+
+.item-description-text section:nth-of-type(2) ul:nth-of-type(2) li span {
+  margin-left: 5px;
+}
+
+@media only screen and (max-width:800px) {
+  .division-line {
+    width: 110%;
+    margin-left: -5%;
+  }
+
+  .item-description-text section:nth-of-type(1) p {
+    font-size: 12px;
+  }
+}
+
+@media only screen and (max-width:500px) {
+  .item-description-text section:nth-of-type(2) h4 {
+    font-size: 18px;
+  }
+}
+
+
 /* footer section */
 footer {
   width: 100%;
@@ -1350,6 +1844,21 @@ footer p {
   } */
 }
 
+@media only screen and (max-width:800px) {
+  .first-footer {
+    margin-right: 30px;
+  }
+  
+  footer li,
+  footer p {
+    font-size: 12px;
+  }
+  
+  footer h4 {
+    font-size: 12px;
+  }
+}
+
 @media only screen and (max-width:500px) {
   footer {
     display: block;
@@ -1374,10 +1883,6 @@ footer p {
     margin-bottom: 10px;
     color: #797979;
     cursor: pointer;
-  }
-  
-  .first-footer {
-    margin-bottom: 30px;
   }
   
   .first-footer img {
