--- a/src/App.css
+++ b/src/App.css
@@ -1206,6 +1206,11 @@ button.best-deals-button {
     margin-right: 0;
     margin-bottom: 35px;
   }
+
+  .best-deals-product section:nth-of-type(1) img:nth-of-type(1) {
+    width: 70%;
+    height: 100%;
+  }
   
   .best-deals-product section:nth-of-type(1) img:nth-of-type(2) {
     top: 10px;
