--- a/src/App.css
+++ b/src/App.css
@@ -1209,6 +1209,7 @@ button.best-deals-button {
 
   .best-deals-product section:nth-of-type(1) img:nth-of-type(1) {
     width: 70%;
+    margin-left: 13%;
     height: 100%;
   }
   
