--- a/src/App.css
+++ b/src/App.css
@@ -822,13 +822,16 @@ main {
   border: 0.5px solid #151515;
 }
 
-.flash-sales-product section:nth-of-type(2) div:nth-of-type(2) {
+.flash-sales-product section:nth-of-type(2) div:nth-of-type(2),
+.cart-flash {
   display: flex;
   align-items: center;
+  justify-content: flex-start;
   margin-bottom: 40px;
 }
 
-.flash-sales-product section:nth-of-type(2) div:nth-of-type(2) p {
+.flash-sales-product section:nth-of-type(2) div:nth-of-type(2) p,
+.cart-flash p {
   margin-right: 24px;
   font-size: 28px;
   font-weight: 600;
@@ -836,7 +839,8 @@ main {
   letter-spacing: 0.5px;
 }
 
-.flash-sales-product section:nth-of-type(2) div:nth-of-type(2) span {
+.flash-sales-product section:nth-of-type(2) div:nth-of-type(2) span,
+.cart-flash span {
   font-size: 20px;
   font-weight: 500;
   line-height: 23.46px;
@@ -1444,6 +1448,14 @@ button.best-deals-button {
   cursor: pointer;
 }
 
+.item-description section:nth-of-type(2) div:nth-of-type(5) button .link {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .item-description section:nth-of-type(2) div:nth-of-type(5) button:nth-of-type(1) {
   color: #fcfcfc;
   background: #840032;
@@ -1734,6 +1746,736 @@ button.best-deals-button {
   }
 }
 
+/* Cart Page */
+.cart-product {
+  width: 100%;
+  padding: 80px 5%;
+  font-family: "Work Sans", sans-serif;
+}
+
+.cart-product h4 {
+  font-size: 32px;
+  font-weight: 600;
+  line-height: 37.54px;
+  letter-spacing: 0.5px;
+  margin-bottom: 20px;
+}
+
+.cart-description {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 3%;
+}
+
+.cart-description section {
+  background: #fafafa;
+  height: 480px;
+  border-radius: 24PX;
+}
+
+.cart-description section:nth-of-type(1) {
+  display: flex;
+  justify-content: space-between;
+  /* align-items: center; */
+  width: 65%;
+  gap: 2%;
+}
+
+.cart-description section:nth-of-type(1) div {
+  /* width: 49%; */
+  position: relative;
+  border-radius: 12px;
+}
+
+.cart-description-image {
+  border-radius: 12px;
+  border: 1px solid #e3e3e3;
+  height: 300px;
+  margin-top: 15px;
+  margin-left: 15px;
+}
+
+.cart-description-image img:nth-of-type(1) {
+  width: 300px;
+  height: 230px;
+  margin-top: 80px;
+  margin-left: 20px;
+}
+
+.cart-description-image img:nth-of-type(2) {
+  width: 20px;
+  height: 20px;
+  position: absolute;
+  top: 24px;
+  right: 24px;
+}
+
+.cart-description section:nth-of-type(1) div:nth-of-type(2) {
+  width: 49%;
+}
+
+.cart-description section:nth-of-type(1) div:nth-of-type(2) div:nth-of-type(1) {
+  display: flex;
+  gap: 15px;
+  margin-bottom: 24px;
+  margin-top: 10px;
+}
+
+.cart-description section:nth-of-type(1) div:nth-of-type(2) h4 {
+  font-size: 24px;
+  font-weight: 500;
+  line-height: 28.15px;
+  letter-spacing: 0.5px;
+  color: #151515;
+}
+
+.cart-description section:nth-of-type(1) div:nth-of-type(2) h5 {
+  font-size: 32px;
+  font-weight: 600;
+  line-height: 37.54px;
+  letter-spacing: 0.5px;
+}
+
+.cart-description section:nth-of-type(1) div:nth-of-type(2) p {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 18.77px;
+  letter-spacing: 0.5px;
+  color: #696969;
+  margin-bottom: 13px;
+}
+
+.icons-click {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 30px;
+  gap: 100px;
+}
+
+.button-product {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  min-width: 120px;
+  max-height: 45px;
+  min-height: 44px;
+  background: #fff;
+  border-radius: 56px !important;
+  margin-top: -10px !important;
+}
+
+.cart-description section:nth-of-type(1) div:nth-of-type(2) div:nth-of-type(2) button {
+  background: transparent;
+  border: none;
+  outline: none;
+  color: #1C1B1F;
+  font-size: 24px;
+  cursor: pointer;
+}
+
+.cart-description section:nth-of-type(2) {
+  width: 32%;
+  padding: 20px 2%;
+}
+
+.cart-description section:nth-of-type(2) h4 {
+  font-size: 32px;
+  font-weight: 600;
+  line-height: 37.54px;
+  letter-spacing: 0.5px;
+  margin-top: 10px;
+  margin-bottom: 24px;
+  color: #000;
+}
+
+.cart-description section:nth-of-type(2) div {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 15px;
+}
+
+.cart-description section:nth-of-type(2) p {
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 18.77px;
+  letter-spacing: 0.5px;
+}
+
+.cart-description section:nth-of-type(2) p img {
+  width: 12px;
+}
+
+.cart-description section:nth-of-type(2) h6 {
+  font-size: 24px;
+  font-weight: 600;
+  line-height: 28.15px;
+  letter-spacing: 0.5px;
+  color: #000;
+}
+
+.cart-description section:nth-of-type(2) form {
+  width: 100%;
+  height: 45px;
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
+
+.cart-description section:nth-of-type(2) form input {
+  width: 100%;
+  height: 100%;
+  border: none;
+  padding: 0 25px;
+  border-radius: 100px;
+}
+
+.cart-description section:nth-of-type(2) form input::placeholder {
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 18.77px;
+  letter-spacing: 0.5px;
+  color: #696969B2;
+}
+
+.cart-description-total {
+  align-items: center;
+}
+
+div.cart-description-total h3 {
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 18.77px;
+  letter-spacing: 0.5px;
+  color: #000;
+}
+
+.cart-description-total h5 {
+  font-size: 28px;
+  font-weight: 600;
+  line-height: 32.84px;
+  letter-spacing: 0.5px;
+  color: #000;
+}
+
+.cart-description-buttons {
+  flex-direction: column;
+}
+
+.cart-description-buttons button {
+  height: 45px;
+  width: 100%;
+  /* border: none; */
+  outline: none;
+  border-radius: 100px;
+  margin-bottom: 10px;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 18.77px;
+  letter-spacing: 0.5px;
+  cursor: pointer;
+}
+
+.cart-description-buttons button .link {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.cart-description-buttons button:nth-of-type(1) {
+  color: #fcfcfc;
+  background: #840032;
+  border: none;
+}
+
+.cart-description-buttons button:nth-of-type(2) {
+  background: transparent;
+  color: #840032;
+  border: 1px solid #696969;
+}
+
+@media only screen and (max-width:1200px) {
+
+  .cart-product {
+    padding: 50px 5%;
+  }
+  
+  .cart-product h4 {
+    font-size: 24px;
+    line-height: 30px;
+    margin-bottom: 20px;
+  }
+
+  .cart-description section {
+    background: #fafafa;
+    height: 480px;
+    border-radius: 24PX;
+  }
+
+  .cart-description section:nth-of-type(1) {
+    display: flex;
+    justify-content: space-between;
+    /* align-items: center; */
+    width: 65%;
+    gap: 2%;
+  }
+
+  .cart-description section:nth-of-type(1) div {
+    /* width: 49%; */
+    position: relative;
+    border-radius: 12px;
+  }
+
+  .cart-description-image {
+    border-radius: 12px;
+    border: 1px solid #e3e3e3;
+    height: 300px;
+    margin-top: 15px;
+    margin-left: 15px;
+  }
+
+  .cart-description-image img:nth-of-type(1) {
+    width: 270px;
+    height: 200px;
+    margin-top: 60px;
+    margin-left: 10px;
+  }
+
+  .cart-description section:nth-of-type(1) div:nth-of-type(2) {
+    width: 49%;
+  }
+
+  .cart-description section:nth-of-type(1) div:nth-of-type(2) div:nth-of-type(1) {
+    display: flex;
+    gap: 20px;
+    margin-bottom: 16px;
+    margin-top: 10px;
+  }
+
+  .cart-description section:nth-of-type(1) div:nth-of-type(2) h4 {
+    font-size: 16px;
+    line-height: 25px;
+  }
+
+  .cart-description section:nth-of-type(1) div:nth-of-type(2) h5 {
+    font-size: 24px;
+    font-weight: 600;
+    line-height: 37.54px;
+    letter-spacing: 0.5px;
+  }
+
+  .cart-description section:nth-of-type(1) div:nth-of-type(2) p {
+    font-size: 13px;
+    margin-bottom: 8px;
+  }
+
+  .icons-click {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 20px;
+    gap: 80px;
+  }
+
+  .button-product {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    min-width: 120px;
+    max-height: 45px;
+    min-height: 44px;
+    background: #fff;
+    border-radius: 56px !important;
+    margin-top: -10px !important;
+  }
+
+  .cart-description section:nth-of-type(1) div:nth-of-type(2) div:nth-of-type(2) button {
+    background: transparent;
+    border: none;
+    outline: none;
+    color: #1C1B1F;
+    font-size: 24px;
+    cursor: pointer;
+  }
+
+  .cart-description section:nth-of-type(2) {
+    width: 32%;
+    padding: 20px 2%;
+  }
+
+  .cart-description section:nth-of-type(2) h4 {
+    font-size: 24px;
+    margin-top: 8px;
+    margin-bottom: 18px;
+  }
+
+  .cart-description section:nth-of-type(2) div {
+    margin-bottom: 10px;
+  }
+
+  .cart-description section:nth-of-type(2) p {
+    font-size: 13px;
+    line-height: 14px;
+  }
+
+  .cart-description section:nth-of-type(2) p img {
+    width: 8px;
+  }
+
+  .cart-description section:nth-of-type(2) h6 {
+    font-size: 18px;
+    line-height: 23px;
+  }
+
+  .cart-description section:nth-of-type(2) form {
+    width: 100%;
+    height: 35px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+
+  .cart-description section:nth-of-type(2) form input {
+    padding: 0 25px;
+  }
+
+  .cart-description section:nth-of-type(2) form input::placeholder {
+    font-size: 12px;
+    line-height: 13px;
+  }
+
+  .cart-description-total {
+    align-items: center;
+  }
+
+  div.cart-description-total h3 {
+    font-size: 12px;
+  }
+
+  .cart-description-total h5 {
+    font-size: 24px;
+  }
+
+  .cart-description-buttons {
+    flex-direction: column;
+  }
+
+  .cart-description-buttons button {
+    height: 35px;
+    margin-bottom: 8px;
+    font-size: 12px;
+  }
+}
+
+@media only screen and (max-width:800px) {
+  .cart-description {
+    flex-direction: column;
+  }
+
+  .cart-product {
+    width: 100%;
+    padding: 80px 5%;
+    font-family: "Work Sans", sans-serif;
+  }
+  
+  .cart-description {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+  }
+  
+  .cart-description section {
+    background: #fafafa;
+    height: auto;
+    border-radius: 24PX;
+    width: 100%;
+    padding: 20px 5%;
+  }
+  
+  .cart-description section:nth-of-type(1) {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 20px;
+    /* width: 100%; */
+  }
+  
+  .cart-description section:nth-of-type(1) div {
+    width: 100%;
+    position: relative;
+    border-radius: 12px;
+  }
+  
+  .cart-description-image {
+    border-radius: 12px;
+    border: 1px solid #e3e3e3;
+    height: 300px;
+    margin-top: 15px;
+    margin-left: 0;
+  }
+  
+  .cart-description-image img:nth-of-type(1) {
+    width: 300px;
+    height: 230px;
+    margin-top: 80px;
+    margin-left: 0;
+  }
+  
+  .cart-description-image img:nth-of-type(2) {
+    width: 20px;
+    height: 20px;
+    position: absolute;
+    top: 24px;
+    right: 24px;
+  }
+  
+  .cart-description section:nth-of-type(1) div:nth-of-type(2) {
+    width: 100%;
+  }
+  
+  .cart-description section:nth-of-type(1) div:nth-of-type(2) div:nth-of-type(1) {
+    display: flex;
+    gap: 15px;
+    margin-bottom: 24px;
+    margin-top: 10px;
+    width: 100%;
+  }
+  
+  .cart-description section:nth-of-type(1) div:nth-of-type(2) h4 {
+    font-size: 24px;
+    font-weight: 500;
+    line-height: 28.15px;
+    letter-spacing: 0.5px;
+    color: #151515;
+  }
+  
+  .cart-description section:nth-of-type(1) div:nth-of-type(2) h5 {
+    font-size: 32px;
+    font-weight: 600;
+    line-height: 37.54px;
+    letter-spacing: 0.5px;
+  }
+  
+  .cart-description section:nth-of-type(1) div:nth-of-type(2) p {
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 18.77px;
+    letter-spacing: 0.5px;
+    color: #696969;
+    margin-bottom: 13px;
+  }
+  
+  .icons-click {
+    display: flex;
+    /* flex-direction: column; */
+    justify-content: center;
+    align-items: center;
+    margin-top: 30px;
+    gap: 100px;
+  }
+  
+  .cart-description section:nth-of-type(1) div:nth-of-type(2) div:nth-of-type(2) button {
+    background: transparent;
+    border: none;
+    outline: none;
+    color: #1C1B1F;
+    font-size: 24px;
+    cursor: pointer;
+  }
+  
+  .cart-description section:nth-of-type(2) {
+    width: 100%;
+    padding: 20px 5%;
+  }
+  
+  .cart-description section:nth-of-type(2) div {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    margin-bottom: 15px;
+  }
+}
+
+@media only screen and (max-width:500px) {
+  .cart-description section:nth-of-type(1) {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 20px;
+    width: 100%;
+  }
+}
+
+
+/* wishlist section */
+.cart-wishlist {
+  width: 100%;
+  padding: 50px 5%;
+  font-family: "Work Sans", sans-serif;
+}
+
+.cart-wishlist h4 {
+  font-size: 32px;
+  font-weight: 600;
+  line-height: 37.54px;
+  letter-spacing: 0.5px;
+  color: #151515;
+  margin-bottom: 20px;
+}
+
+.wishlist-product {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 30px;
+}
+
+.wishlist-product section {
+  display: flex;
+  border: 1px solid #E3E3E3EE;
+  border-radius: 24px;
+  overflow: hidden;
+  cursor: pointer;
+}
+
+.wishlist-product-image {
+  width: 50%;
+  position: relative;
+}
+
+.wishlist-product-image img:nth-of-type(1) {
+  width: 100%;
+}
+
+.wishlist-product-image img:nth-of-type(2) {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  padding: 10px;
+  position: absolute;
+  top: 14px;
+  right: 14px;
+  background: #DAE0EF33;
+}
+
+.wishlist-product-details {
+  background: #DAE0EF33;
+  padding: 0 5%;
+  width: 50%;
+}
+
+.wishlist-product-details div {
+  display: flex;
+  margin-bottom: 30px;
+}
+
+.wishlist-product-details div:nth-of-type(1) {
+  justify-content: space-between;
+  margin-top: 20px;
+}
+
+.wishlist-product-details div p {
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 21.79px;
+  color: #000;
+}
+
+.wishlist-product-details div h5 {
+  font-size: 28px;
+  font-weight: 600;
+  line-height: 32.84px;
+  letter-spacing: 0.5px;
+  color: #000;
+}
+
+.wishlist-product-details button {
+  width: 130px;
+  height: 40px;
+  border: 1px solid #151515;
+  border-radius: 100px;
+  background: transparent;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 21.79px;
+  cursor: pointer;
+}
+
+.cart-wishlist h6 {
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 18.77px;
+  letter-spacing: 0.5px;
+  color: #000;
+  text-decoration: underline;
+  margin-top: 30px;
+  cursor: pointer;
+}
+
+.cart-flash {
+  justify-content: flex-start;
+}
+
+@media only screen and (max-width:1200px) {
+  .cart-wishlist h4 {
+    font-size: 24px;
+    margin-bottom: 15px;
+  }
+  
+  .wishlist-product {
+    gap: 20px;
+  }
+  
+  .wishlist-product-image img:nth-of-type(2) {
+    width: 30px;
+    height: 30px;
+    padding: 7px;
+    top: 10px;
+    right: 10px;
+  }
+  
+  .wishlist-product-details {
+    padding: 0 3%;
+  }
+  
+  .wishlist-product-details div {
+    margin-bottom: 20px;
+    gap: 20px;
+  }
+  
+  .wishlist-product-details div:nth-of-type(1) {
+    margin-top: 15px;
+  }
+  
+  .wishlist-product-details div p {
+    font-size: 13px;
+  }
+  
+  .wishlist-product-details div h5 {
+    font-size: 18px;
+  }
+  
+  .wishlist-product-details button {
+    width: 100px;
+    height: 30px;
+    font-size: 13px;
+  }
+  
+  .cart-wishlist h6 {
+    font-size: 14px;
+  }
+}
+
+@media only screen and (max-width:500px) {
+  .wishlist-product,
+  .wishlist-product section {
+    flex-direction: column;
+  }
+
+  .wishlist-product section div {
+    padding-bottom: 10px;
+    width: 100%;
+  }
+}
 
 /* footer section */
 footer {
